# aoc2025

./: pyproject.toml
day01/: part1.py
day02/: part1.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py  ex3.txt
day10/: day10.py
day11/: day11.py
day12/: day12.py
