[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent Of Code 2025"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "useless information"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulp = "^3.3.0"
svgwrite = "^1.4.3"
